--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "indecision-app",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Akash Chhetri <akash.chhetri1@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
-  }
+	"name": "indecision-app",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "Akash Chhetri <akash.chhetri1@gmail.com>",
+	"license": "MIT",
+	"dependencies": {
+		"@babel/preset-env": "^7.11.5",
+		"@babel/preset-flow": "^7.10.4",
+		"@babel/preset-react": "^7.10.4"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.11.6",
+		"@babel/core": "^7.11.6",
+		"babel-loader": "^8.1.0"
+	}
 }
