--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
 	"main": "index.js",
 	"author": "Akash Chhetri <akash.chhetri1@gmail.com>",
 	"license": "MIT",
-	"dependencies": {
+	"scripts": {
+		"server": "live-server public/",
+		"build": "babel src/app.js --out-file=public/scripts/app.js --watch "
+	},
+	"dependencies": {},
+	"devDependencies": {
 		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-flow": "^7.10.4",
-		"@babel/preset-react": "^7.10.4"
-	},
-	"devDependencies": {
+		"@babel/preset-react": "^7.10.4",
 		"@babel/cli": "^7.11.6",
 		"@babel/core": "^7.11.6",
-		"babel-loader": "^8.1.0"
+		"babel-loader": "^8.1.0",
+		"live-server": "^1.2.1"
 	}
 }
