--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
 	"license": "MIT",
 	"scripts": {
 		"server": "live-server public/",
-		"build": "babel src/app.js --out-file=public/scripts/app.js --watch "
+		"build": "webpack --watch",
+		"build-babel": "babel src/app.js --out-file=public/scripts/app.js --watch"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"validator": "^13.1.17"
+	},
 	"devDependencies": {
+		"@babel/cli": "^7.11.6",
+		"@babel/core": "^7.11.6",
 		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-flow": "^7.10.4",
 		"@babel/preset-react": "^7.10.4",
-		"@babel/cli": "^7.11.6",
-		"@babel/core": "^7.11.6",
 		"babel-loader": "^8.1.0",
-		"live-server": "^1.2.1"
+		"live-server": "^1.2.1",
+		"webpack": "^4.44.2",
+		"webpack-cli": "^3.3.12"
 	}
 }
