--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
 		"dev-server": "webpack-dev-server"
 	},
 	"dependencies": {
+		"css-loader": "^4.3.0",
+		"node-sass": "^4.14.1",
+		"normalize.css": "^8.0.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-modal": "^3.11.2",
+		"sass-loader": "^10.0.2",
+		"style-loader": "^1.2.1",
 		"validator": "^13.1.17"
 	},
 	"devDependencies": {
